random en matrices
Aun no terminado

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ pkg/
 src/
 /Proyecto/ProyectoProgra/nbproject/private/
 /Proyecto/ProyectoProgra/build/
+/ramdom en matrices/ProyectoProgra/nbproject/private/
