--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/
 /Proyecto/ProyectoProgra/nbproject/private/
 /Proyecto/ProyectoProgra/build/
 /ramdom en matrices/ProyectoProgra/nbproject/private/
+/ramdom en matrices/ProyectoProgra/Proyecto_Programacion_1;/nbproject/private/
