--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ src/
 /Proyecto/ProyectoProgra/build/
 /ramdom en matrices/ProyectoProgra/nbproject/private/
 /ramdom en matrices/ProyectoProgra/Proyecto_Programacion_1;/nbproject/private/
+/ProyectoDeHeiner_Jabib/nbproject/private/
+/ProyectoDeHeiner_Jabib/build/
+/Proyecto1.2/nbproject/private/
+/Proyecto1.2/build/
